fixed loadbalancer-client-2 example to use cp option instead of java.ext.dirs